# Meteobike

./: .gitignore  .gitmodules  CMakeLists.txt
Code/: meteobike03.py  meteobike_epaper.py  meteobike_epaper.py.bak  thermalcam.py
Images/: draft.xcf  draft_new.xcf
include/: consts.h  dht_measurement.h  dhtpoller.h  displayupdater.h  gpspoller.h  measurement.h  meteobike.h  pi_2_dht_read.h  ts_queue.h  utils.h  writer.h
lib/bcm2835-1.71/examples/gpio/: gpio
lib/e-Paper/RaspberryPi_JetsonNano/c/examples/: EPD_2in7_V2_test.c
lib/e-Paper/RaspberryPi_JetsonNano/c/lib/Config/: DEV_Config.h
lib/e-Paper/RaspberryPi_JetsonNano/c/lib/Fonts/: fonts.h  roboto12.c  roboto13.c  roboto14.c
lib/e-Paper/RaspberryPi_JetsonNano/c/lib/GUI/: GUI_BMPfile.h  GUI_Paint.h
lib/e-Paper/RaspberryPi_JetsonNano/c/lib/e-Paper/: EPD_2in7.h  EPD_2in7_V2.h  EPD_2in7b.c  EPD_2in7b.h  EPD_2in7b_V2.h
lib/e-Paper/STM32/STM32-F103ZET6/User/e-Paper/: EPD_1in64g.c
scratch/: dtm.py
src/: dht_measurement.cpp  dhtpoller.cpp  displayupdater.cpp  gpspoller.cpp  measurement.cpp  meteobike  meteobike.cpp  pi_2_dht_read.c  utils.cpp  writer.cpp
